# luasleuth

./: Cargo.toml  LICENSE  README.md
crates/luasleuth/: Cargo.toml
crates/luasleuth-common/: Cargo.toml
crates/luasleuth-common/src/: assembler.rs  disassembler.rs  lib.rs  macros.rs  types.rs
crates/luasleuth-lua51/: Cargo.toml
crates/luasleuth-lua51/src/: assembler.rs  disassembler.rs  types.rs
crates/luasleuth-lua51/tests/: bytecode_binary.rs  constants.rs
crates/luasleuth-lua52/: Cargo.toml
crates/luasleuth-lua52/src/: types.rs
crates/luasleuth-lua52/tests/: bytecode_binary.rs
crates/luasleuth-lua53/: Cargo.toml
crates/luasleuth-lua53/src/: disassembler.rs  types.rs
crates/luasleuth-lua53/tests/: bytecode_binary.rs
crates/luasleuth-lua54/: Cargo.toml
crates/luasleuth-lua54/src/: disassembler.rs  lib.rs  types.rs
crates/luasleuth-lua54/tests/: bytecode_binary.rs
crates/luasleuth-luajit/: Cargo.toml
crates/luasleuth/src/: lib.rs  main.rs  types.rs
data/patterns/: README.md  luajitv1.hexpat  luajitv2.hexpat
src/: lib.rs  main.rs  utils.rs
src/common/: array.rs  mod.rs  string.rs
src/lua51/: common.rs  disassembler.rs  mod.rs
src/lua51/common/: constants.rs  debug_info.rs  instructions.rs  string.rs
src/lua52/: common.rs  disassembler.rs  mod.rs
src/lua52/common/: constants.rs  debug_info.rs  instructions.rs  string.rs  upvalues.rs
src/lua53/: common.rs  mod.rs
src/lua53/common/: instructions.rs
src/lua54/: mod.rs
src/luajit/: mod.rs
src/luajit/v1/: mod.rs
src/luajit/v2/: mod.rs
(+28 files in other folders)
