[workspace]
resolver = "2"
members = [
    "crates/luasleuth",
    "crates/luasleuth-common",
    "crates/luasleuth-lua51",
    "crates/luasleuth-lua52",
    "crates/luasleuth-lua53",
    "crates/luasleuth-lua54",
    "crates/luasleuth-luajit",
]

[workspace.dependencies]
scroll = { version = "0.12.0", features = ["derive"] }
luasleuth-common = { path = "./crates/luasleuth-common" }
luasleuth-lua51 = { path = "./crates/luasleuth-lua51" }
luasleuth-lua52 = { path = "./crates/luasleuth-lua52" }
luasleuth-lua53 = { path = "./crates/luasleuth-lua53" }
luasleuth-lua54 = { path = "./crates/luasleuth-lua54" }
luasleuth-luajit = { path = "./crates/luasleuth-luajit" }
